<resources>
    <string name="app_name">Chat App</string>
    <string name="verify">Verify</string>
    <string name="enter_the_otp">- - -  - - -</string>
    <string name="submit">Done</string>
    <string name="Continue">Continue</string>
    <string name="welcome_to_chat_app">Welcome to chat app</string>
    <string name="please_enter_valid_phone_number_you_will_get_sms">Please enter valid phone number. You will get sms</string>
    <string name="profile">Profile</string>
    <string name="enter_the_name">Enter the name</string>
    <string name="enter_the_status">Enter the status</string>
    <string name="save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="read_our_privacy_policy_tap_agree_and_continue_to_accept_terms_and_services">Read our privacy policy. Tap Agree and continue to accept terms and services</string>
    <string name="send">send</string>
    <string name="from_anusha">from Anusha</string>
    <string name="enter_phone_no">Enter phone no</string>
    <string name="enter_group_name">Enter group name</string>
    <string name="type_a_message">Type a message</string>
    <string name="textview">TextView</string>
    <string name="new_group">New Group</string>
    <string name="add_group_name">Add group name</string>
    <string name="enter_sms_code">Enter sms code</string>
    <string name="save_btn">SAVE</string>
    <string name="group_creation">group created successfully</string>
    <string name="settings">Profile</string>
    <string name="logout">logout</string>
    <string name="group">Language</string>
    <string name="select_a_language">Select a language</string>
    <string name="english">English</string>
    <string name="radiobutton">Hindi</string>
    <string name="image_cannot_empty">Image cannot be empty</string>
    <string name="fields_empty">name and staus fields should not be empty</string>
    <string name="chat_tab">Chats</string>
    <string name="group_chat">Group Chats</string>
</resources>