<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".language.LanguageActivity"
    android:background="@color/black"
    >

    <ImageView
        android:id="@+id/backToHome"
        android:layout_width="28dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="257dp"
        android:layout_height="37dp"
        android:layout_marginTop="28dp"
        android:text="@string/select_a_language"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.234"
        app:layout_constraintStart_toEndOf="@+id/backToHome"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="178dp"
        tools:layout_editor_absoluteY="159dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="121dp"
        >

        <RadioButton
            android:id="@+id/radioButtonEnglish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/english" />

        <RadioButton
            android:id="@+id/radioButtonHindi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/radiobutton" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>