<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AuthenticationActivity"
    android:background="@color/black"
    >

    <TextView
        android:id="@+id/textViewPhone"
        android:layout_width="210dp"
        android:layout_height="42dp"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:text="@string/verify"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/otp"
        android:layout_width="396dp"
        android:layout_height="43dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/enter_the_otp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPhone" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="320dp"
        android:layout_height="52dp"
        android:layout_marginTop="72dp"
        android:backgroundTint="@color/green"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otp" />

    <ProgressBar
        android:id="@+id/loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submitButton" />

</androidx.constraintlayout.widget.ConstraintLayout>