<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/resendButton"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    >


    <TextView
        android:id="@+id/textViewPhone"
        android:layout_width="210dp"
        android:layout_height="42dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/verify"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appLogo" />

    <EditText
        android:id="@+id/otp"
        android:layout_width="396dp"
        android:layout_height="43dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_the_otp"
        android:textColor="@color/white"
        android:inputType="number"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/smsCode" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="342dp"
        android:layout_height="63dp"
        android:backgroundTint="@color/green"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otp"
        app:layout_constraintVertical_bias="0.207" />

    <ProgressBar
        android:id="@+id/loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submitButton" />

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="198dp"
        android:layout_height="90dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/applogo" />

    <TextView
        android:id="@+id/smsCode"
        android:layout_width="167dp"
        android:layout_height="33dp"
        android:layout_marginTop="20dp"
        android:text="Enter sms code"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPhone" />
</androidx.constraintlayout.widget.ConstraintLayout>