<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".home.GroupName">

    <EditText
        android:id="@+id/groupName"
        android:layout_width="254dp"
        android:layout_height="48dp"
        android:layout_marginTop="128dp"
        android:ems="10"
        android:hint="@string/enter_group_name"
        android:inputType="textPersonName"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.808"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.893"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupName"
        app:srcCompat="@drawable/next" />

    <ImageView
        android:id="@+id/backImage"
        android:layout_width="29dp"
        android:layout_height="28dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="128dp"
        android:layout_height="29dp"
        android:layout_marginTop="12dp"
        android:text="@string/new_group"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toEndOf="@+id/backImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="165dp"
        android:layout_height="29dp"
        android:layout_marginTop="12dp"
        android:text="@string/add_group_name"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.291"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView4"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="28dp"
        android:padding="5dp"
        android:src="@drawable/ic_baseline_person_24_white"
        app:civ_border_color="#ff000000"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toStartOf="@+id/groupName"
        app:layout_constraintHorizontal_bias="0.574"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

</androidx.constraintlayout.widget.ConstraintLayout>